# pwright

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/pwright-bridge/: Cargo.toml
crates/pwright-bridge/src/: actions.rs  browser.rs  chrome_http.rs  clock.rs  content.rs  cookies.rs  evaluate.rs  keys.rs  lib.rs  navigate.rs  snapshot.rs  tab.rs  test_utils.rs
crates/pwright-bridge/src/playwright/: keyboard.rs  locator.rs  mod.rs  mouse.rs  network.rs  page.rs  selectors.rs  touchscreen.rs
crates/pwright-bridge/tests/: concurrency.rs  download_spike.rs  fake_browser.rs  playwright_comparison.rs
crates/pwright-cdp/: Cargo.toml
crates/pwright-cdp-gen/: Cargo.toml
crates/pwright-cdp-gen/proto/cdp/: http_endpoints.json
crates/pwright-cdp-gen/src/: codegen.rs  main.rs  protocol.rs
crates/pwright-cdp/src/: client_trait.rs  connection.rs  events.rs  lib.rs  session.rs
crates/pwright-cdp/src/domains/: accessibility.rs  browser.rs  dom.rs  fetch.rs  input.rs  mod.rs  network.rs  page.rs  runtime.rs  target.rs
crates/pwright-cdp/tests/: generated_types.rs
crates/pwright-cli/: Cargo.toml
crates/pwright-cli/src/: commands.rs  main.rs  output.rs  state.rs
crates/pwright-cli/tests/: download_command.rs
crates/pwright-fake/: Cargo.toml
crates/pwright-fake/src/: builder.rs  client.rs  dom.rs  lib.rs  selector.rs
crates/pwright-js/: Cargo.toml
crates/pwright-script/: Cargo.toml  build.rs
crates/pwright-script/proto/pwright/script/v1/: script.proto
crates/pwright-script/src/: error.rs  executor.rs  lib.rs  model.rs  output.rs  parser.rs  validator.rs
crates/pwright-script/tests/: execute_script.rs
crates/pwright-server/: Cargo.toml  build.rs
crates/pwright-server/src/: main.rs  service.rs
crates/pwright-server/src/service/: actions.rs  content.rs  conversions.rs  data.rs  lifecycle.rs  navigation.rs  tabs.rs  tests.rs
deploy/: Dockerfile  README.md  docker-compose.yml
deploy/scripts/: hello.yaml
docs/: README.md  architecture.md  cli-guide.md  code-quality-findings.md  codelabs.md  feedback-from-gemini-pdf-extractor.md  getting-started.md  grpc-api.md  index.md  known-issues.md  lightpanda-compat.md  recipes-for-agents.md  tech-debt.md  todo.md
docs/bugs/: gmail-cdp-click-limitation.md  index.md  tab-leak-bug-report.md  targetinfo-http-parse-failure.md
docs/exploration/: github-trending-structure.md  reddit-structure.md  weibo-structure.md  wikipedia-structure.md  x-structure.md  xueqiu-structure.md  zhihu-structure.md
docs/guides/: remote-cdp.md
docs/knowledge/: api-parity.md  cdp-codegen-design.md  cdp-protocol.md  chrome-devtools-mcp-comparison.md  code-review-2026-03-29.md  critical-review-2026-03-29.md  feature-comparison.md  network-capture-design.md  phases.md  playwright-api.md  pwright-improvements.md  recipe-catalog.md  recipes-design.md  script-runner-design.md  testing-strategy.md
examples/: README.md
examples/github-api/: Cargo.toml
examples/github-api/tests/: test_api.rs
examples/lightpanda-test/: Cargo.toml
examples/lightpanda-test/src/: main.rs
examples/mock-battery/: Cargo.toml
examples/mock-filesystem/: Cargo.toml
examples/mock-filesystem/tests/: directory_reader.rs  file_reader.rs
examples/recipes/: README.md
examples/scripts/: README.md  error-handling.yaml  extract-links.yaml  form-fill.yaml  hackernews.yaml  hello.yaml  login-and-scrape.yaml  paginate.yaml  screenshot-audit.yaml
examples/svgomg/: Cargo.toml
examples/svgomg/tests/: example.rs
examples/todomvc/: Cargo.toml
skill/pwright/: RECIPE.md  SKILL.md
tests/: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
tests/fixtures/: action-extras.html  article.html  content.html  coordinate-actions.html  data-table.html  deploy-healthy.html  file-upload.html  input.html  interactive.html  locator-compose.html  locator-filter.html  locator-label.html  locator-role.html  locator-text.html  navigation-extras-page2.html  navigation-extras.html  notifications.html  search-results.html  touchscreen.html
tests/golden/: cli-actions.golden.json  cli-content.golden.json  cli-download.golden.json  cli-eval-advanced.golden.json  cli-eval.golden.json  cli-history.golden.json  cli-keyboard.golden.json  cli-navigation.golden.json  cli-snapshot.golden.json  download.golden.json  file-upload.golden.json  keyboard.golden.json  locator-click.golden.json  locator-compose.golden.json  locator-fill.golden.json  locator-filter.golden.json  locator-label.golden.json  locator-query.golden.json  locator-role.golden.json  locator-text.golden.json  mouse.golden.json  page-content.golden.json  page-evaluate.golden.json  page-goto.golden.json  screenshot.golden.json  touchscreen.golden.json
tests/integration/: Cargo.toml  Dockerfile  README.md  docker-compose.firefox.yml  docker-compose.lightpanda.yml  docker-compose.local.yml  docker-compose.yml  firefox-entrypoint.sh  firefox.Dockerfile
tests/integration/pages/: api-demo.html  login.html  todo.html
tests/integration/src/: lib.rs
tests/integration/tests/: actions.rs  browser_connect.rs  chrome_http.rs  click_navigation.rs  concurrency.rs  connection.rs  coordinate_actions.rs  evaluate.rs  firefox.rs  lightpanda.rs  locator.rs  locator_advanced.rs  login.rs  navigation.rs  navigation_advanced.rs  network.rs  network_capture.rs  recipes.rs  script_execution.rs  tab_lifecycle.rs
tests/specs/: action-extras.spec.ts  cli-actions.spec.ts  cli-content.spec.ts  cli-eval-advanced.spec.ts  cli-eval.spec.ts  cli-history.spec.ts  cli-keyboard.spec.ts  cli-navigation.spec.ts  cli-snapshot.spec.ts  download.spec.ts  file-upload.spec.ts  keyboard.spec.ts  locator-click.spec.ts  locator-compose.spec.ts  locator-fill.spec.ts  locator-filter.spec.ts  locator-label.spec.ts  locator-query.spec.ts  locator-role.spec.ts  locator-text.spec.ts  mouse.spec.ts  navigation-extras.spec.ts  page-content.spec.ts  page-evaluate.spec.ts  page-goto.spec.ts  screenshot.spec.ts  touchscreen.spec.ts
tests/src/: cli-harness.ts  harness.ts  (+9 more)
(+46 files in other folders)
