[package]
name = "pwright-bridge"
description = "High-level browser operations built on pwright-cdp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pwright-cdp = { workspace = true }
pwright-js = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
