[package]
name = "pwright-cli"
description = "CLI for browser automation via Chrome DevTools Protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pwright"
path = "src/main.rs"

[dependencies]
pwright-cdp = { workspace = true }
pwright-bridge = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = "0.4"
reqwest = { workspace = true }
pwright-script = { workspace = true }
