[package]
name = "example-github-api"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
pwright-bridge = { path = "../../crates/pwright-bridge", features = ["test-utils"] }
pwright-js = { path = "../../crates/pwright-js" }
tokio = { workspace = true }
serde_json = { workspace = true }
