[package]
name = "example-svgomg"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
pwright-bridge = { path = "../../crates/pwright-bridge", features = ["test-utils"] }
pwright-fake = { path = "../../crates/pwright-fake" }
pwright-js = { path = "../../crates/pwright-js" }
tokio = { workspace = true }
serde_json = { workspace = true }
